k3s/dozzle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: devops
spec:
  selector:
    app: dozzle
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
