k3s/dozzle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle-ingress
  namespace: devops
spec:
  rules:
    - host: dozzle.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dozzle
                port:
                  number: 8080
